# Switchy

./: Cargo.toml  README.md
src/: main.rs
src/client/: webapi.rs
src/data/: bots.rs
ui/: app-window.slint
