[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde_json = "1.0"
rand = "0.8.4"
hmac = "0.12"
sha2 = "0.10"
hex-literal = "0.3"
base64 = "0.21"
ureq = { version = "2.10.1", features = ["json"] }
serde_derive = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
slint-build = "1.7.2"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1